--- a/public/css/less/modules-gg/text-image.less
+++ b/public/css/less/modules-gg/text-image.less
@@ -3,4 +3,8 @@
 		width: 60%;
 		margin-right: 20px;
 	}
+
+	> figure{
+		width: 77%;
+	}
 }
