--- a/public/css/less/site-gg.less
+++ b/public/css/less/site-gg.less
@@ -95,7 +95,7 @@ main{
 	padding: 40px 0 0;
 }
 
-footer{
+.site-footer{
     border-top: solid rgba(255,255,255,0.2) 1px;
     padding: 20px;
     background: @color-background;
@@ -155,6 +155,7 @@ footer{
 		padding: 0 25px;
 		display: inline-block;
 		line-height: 4;
+		color: @color-primary-text;
 
 		&.logo{
 			 padding: 15px 60px;
@@ -411,6 +412,7 @@ p{
     background: rgba(0, 0, 0, 0.7);
     top: 0;
     overflow: auto;
+    cursor: pointer;
 
     .animation(
 	 fadeOutMessages,
@@ -423,9 +425,54 @@ p{
 	    margin: 10% auto;
     	width: 50%;
     	min-width: 960px;
-    	min-height: 350px;
+    	min-height: 200px;
     	background: @color-black;
     	border-radius: 5px;
+    	cursor: default;
+	    box-sizing: border-box;
+	    padding: 30px;
+	    position: relative;
+
+    	i{
+    		position: absolute;
+		    top: 10px;
+		    right: 10px;
+		    cursor: pointer;
+    	}
+
+    	div{
+		    padding-left: 15px;
+    		width: 100%;
+    	}
+
+    	img{
+    		border-radius: 2px;
+    	}
+
+    	h2{
+    		font-size: 3.5rem;
+    		margin-bottom: 10px;
+    		color: @color-white;
+    	}
+
+    	p{
+		    font-size: 1.5rem;
+    	}
+
+    	.button{
+    		display: inline-block;
+    		margin-right: 5px;
+    		background: @color-primary-button;
+    		border-radius: 5px;
+    		padding: 10px;
+    		.awesome-icon('\f08e', @margin-left: 5px);
+    		.transition(all 0.5s linear);
+
+    		&:hover{
+    			background: @color-hover;
+    			color:	@color-white;
+    		}
+    	}
     }
 }
 
